# sssgraph

./: .env.example  .gitignore  README.md  laserctl
.github/workflows/: ci.yml
api/: .env.example  go.mod  go.sum  main.go
api/analytics/: clickhouse.go
api/auth/: auth.go  auth_test.go
api/cache/: redis.go
api/cmd/dbmigrate/: main.go
api/config/: config.go
api/database/: db.go  migrations.go
api/database/migrations/: 0001_core_schema.down.sql  0001_core_schema.up.sql  0002_automation_safety_and_audit.down.sql  0002_automation_safety_and_audit.up.sql  0003_webhook_security.down.sql  0003_webhook_security.up.sql
api/handlers/: agent.go  agent_automations.go  agent_automations_test.go  agent_backtest.go  agent_backtest_test.go  agent_logic_test.go  agent_utils.go  agent_utils_test.go  events.go  health.go  idl.go  webhook_security.go  webhook_security_test.go
api/integration/: production_services_test.go
api/models/: agent.go  idl.go
api/observability/: metrics.go  metrics_test.go
api/openapi/: laserstream-agent-api.yaml
api/ratelimit/: limiter.go  limiter_test.go
api/routes/: e2e_test.go  routes.go  routes_integration_test.go
api/scripts/: db_migrate.sh  db_rollback_last.sh
api/stream/: manager.go
ingester/: .env.example  Cargo.toml
ingester/src/: main.rs
ops/grafana/: laserstream-slo-dashboard.json
ops/prometheus/: laserstream-slo-alerts.yml
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: client.ts  types.ts
