[package]
name = "ingester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
base64 = "0.22.1"
dotenvy = "0.15.7"
env_logger = "0.11.9"
futures = "0.3.32"
log = "0.4.29"
prost = "0.14.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
solana-sdk = "4.0.1"
tokio = { version = "1.49.0", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-serde_json-1"] }
tonic = "0.14.5"
yellowstone-grpc-client = "12.0.0"
yellowstone-grpc-proto = "12.0.0"
